[project]
name = "reflex-locust-ws"
version = "0.1.0"
description = "WebSocket load testing for Reflex apps via Locust (/_event Socket.IO)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = ["reflex", "locust", "load-testing", "websocket", "performance"]
dependencies = [
    "locust>=2.44.4",
    "reflex>=0.9.5.post2",
]

[project.urls]
Homepage = "https://github.com/JiaLiangChen99/reflex_locust_ws"
Documentation = "https://github.com/JiaLiangChen99/reflex_locust_ws#readme"
Repository = "https://github.com/JiaLiangChen99/reflex_locust_ws"
Issues = "https://github.com/JiaLiangChen99/reflex_locust_ws/issues"

[project.optional-dependencies]
report = ["matplotlib>=3.8"]

[project.scripts]
reflex-locust-ws = "reflex_locust_ws.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
norecursedirs = ["tests/load", "reports"]
